Let's agree to the disagree. We'll map 3rd party controls to our own classes therefore having the ability to declare XML to CRL mapping. Cleaner xaml without the prefixes.

--- a/App/WeddingBuilder/Views/AddPageView.axaml
+++ b/App/WeddingBuilder/Views/AddPageView.axaml
@@ -1,16 +1,14 @@
-<fluent:ContentDialog
+<ContentDialog
     x:Class="Builder.AddPageView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:fluent="using:FluentAvalonia.UI.Controls"
-    xmlns:ui="clr-namespace:TheXamlGuy.UI.Avalonia;assembly=TheXamlGuy.UI.Avalonia"
     Title="Add Page"
     CloseButtonText="Cancel"
     DefaultButton="Primary"
-    PrimaryButtonClick="{ui:Invoke Add}"
+    PrimaryButtonClick="{Invoke Add}"
     PrimaryButtonText="Add">
     <TextBox
         Width="500"
         Text="{Binding Name}"
         Watermark="Enter page name" />
-</fluent:ContentDialog>
+</ContentDialog>
