--- a/App/WeddingBuilder/Views/CreateProjectConfigurationView.axaml
+++ b/App/WeddingBuilder/Views/CreateProjectConfigurationView.axaml
@@ -3,11 +3,10 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:TheXamlGuy.UI.Avalonia.Controls;assembly=TheXamlGuy.UI.Avalonia.Controls"
-    xmlns:fluent="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
     xmlns:views="using:Builder"
-    Loaded="{Composite {ChangeProperty {Binding $parent[fluent:ContentDialog]},
-                                             Classes,
-                                             Create}}">
+    Loaded="{Composite {ChangeProperty {Binding $parent[ContentDialog]},
+                                       Classes,
+                                       Create}}">
     <Grid>
         <controls:FilePicker x:Name="FilePicker" />
         <StackPanel Spacing="18">
