--- a/App/WeddingBuilder/Views/ProjectView.axaml
+++ b/App/WeddingBuilder/Views/ProjectView.axaml
@@ -2,7 +2,6 @@
     x:Class="Builder.ProjectView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:fluent="using:FluentAvalonia.UI.Controls"
     Loaded="{Navigate {Binding EventAggregator},
                              ProjectConfiguration}">
     <Grid RowDefinitions="Auto,*">
@@ -12,7 +11,7 @@
             HorizontalAlignment="Right"
             Classes="accent"
             Content="New project" />
-        <fluent:Frame
+        <Frame
             Grid.Row="1"
             Content="{Route {Binding Route},
                                    Navigation}"
